# matroska

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: matroska.yml  rust.yml
assets/: bbb-vp9-opus.webm  big-buck-bunny_trailer-av1.mkv  single_stream.mkv  single_stream_av1.mkv  single_stream_vp9.mkv
assets/matroska_test_w1_1/: Release.txt  test1-tag.xml  test2-tag.xml  test3-tag.xml  test4-tag.xml  test5-tag.xml  test6-tag.xml  test7-tag.xml  test8-tag.xml
examples/: matroska_remux.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ebml.rs
src/: demuxer.rs  ebml.rs  elements.rs  fourcc.rs  lib.rs  muxer.rs  permutation.rs
src/ebml/: error.rs  macros.rs  mod.rs  parse.rs  tests.rs
src/serializer/: cookie_utils.rs  ebml.rs  elements.rs  mod.rs
tools/: Cargo.toml
tools/src/: matroska_info.rs
