[package]
name = "matroska"
description = "Matroska/WebM demuxer"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "matroska"
path = "src/lib.rs"

[dependencies]
nom = "5.0"
cookie-factory = "0.3"
av-data = "0.2"
av-format = "0.2"
circular = "0.3"
log = "0.4"

[dev-dependencies]
quickcheck = "0.9"
pretty_env_logger = "0.4"
structopt = "0.3"


[workspace]
members = ["tools"]
