[package]
name = "matroska"
description = "Matroska/WebM demuxer"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
name = "matroska"
path = "src/lib.rs"

[dependencies]
nom = "8.0"
cookie-factory = "0.3"
av-data = "0.4.1"
av-format = "0.7"
circular = "0.3"
log = "0.4"
crc = "3.0.1"
uuid = "1.3.0"
phf = { version = "0.11.1", features = ["macros"] }

[dev-dependencies]
quickcheck = "1"
pretty_env_logger = "0.5"
clap = { version = "4.2", features = ["derive"] }

[workspace]
members = ["tools"]

[profile.release]
strip = "debuginfo"
