[package]
name = "matroska-tools"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]

[[bin]]
name = "matroska_info"
path = "src/matroska_info.rs"

[dependencies]
av-data = { git = "https://github.com/rust-av/rust-av" }
av-format = { git = "https://github.com/rust-av/rust-av" }
circular = "0.2"
log = "0.4"
matroska = { path=".." }
nom = "^5.0"
pretty_env_logger = "0.3"
